--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">Müll-App</string>
     <string name="preference_file_key">garbagesaver_data</string>
+    <string name="show_erase">Zeige Leerungsliste</string>
+    <string name="help">Hilfe</string>
+    <string name="show_agenda">Zeige Versionsagenda</string>
+    <string name="action_settings">Einstellungen</string>
+    <string name="show_info">Info</string>
+    <string name="show_garbage_dates">Zeige Abholtermine</string>
+    <string name="title_activity_show__erased">Leerungsliste</string>
 </resources>
